fix triangle visibility + z-index for menu

--- a/repo/site/style/header_nav.less
+++ b/repo/site/style/header_nav.less
@@ -357,6 +357,7 @@
   position: absolute;
   top: 160px;
   left: 290px;
+  z-index: 1;
 }
 
 .menu > li:hover .mega {
